--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   },
   "homepage": "https://github.com/lucianop3196/Ecommerce-API#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
+    "morgan": "^1.10.0",
     "swagger-ui-express": "^4.3.0"
   }
 }
