--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "ejs": "^3.1.8",
     "express": "^4.18.0",
+    "express-handlebars": "^5.2.0",
     "morgan": "^1.10.0",
+    "pug": "^3.0.2",
     "swagger-ui-express": "^4.3.0"
   }
 }
